package ca.group20.sysc4806project.model.question;

public enum MultipleChoiceType {
    SINGLE_SELECTION,
    MULTI_SELECTION,
    RATING
}
