@startuml
'https://plantuml.com/class-diagram

class Surveyor{
    - id : Long
    - username : String
    - firstName : String
    - lastName : String
    - hashedPassword : String
    - roles : Collection<Role>
    + Surveyor(username : String, firstName : String, lastName : String, hashedPassword : String) : Surveyor
    + addRole(role : Role) : void
    + getRoles() : Collection<Role>
    + getId() : Long
    + getUsername() : String
    + setUsername(username : String) : void
    + getFirstName() : String
    + setFirstName(firstName : String) : void
    + getLastName() : String
    + setLastName(lastName : String) : void
    + getHashedPassword() : String
    + setHashedPassword(hashedPassword : String) : void
    + getSurveys() : List<Survey>
    + getSurvey(name : String) : Survey
    + addSurvey(s : Survey ) : boolean
    + toString() : String
    + equals(o : Object) : boolean
    + hashCode() : int
}

class Survey{
    - id : Long
    - surveyor : Surveyor
    - name : String
    - respondents: List<Respondent>
    - questions : List<Question>
    - surveys : List<Survey>
    + Survey(name : String): Survey
    + getId() : Long
    + getName() : String
    + setName(name : String) : void
    + setSurveyor(surveyor : Surveyor) : Surveyor
    + getSurveyorId() : Long
    + addRespondent(resp: Respondent): boolean
    + getRespondents(): List<Respondent>
    + removeRespondent(resp: Respondent): boolean
    + getQuestions() : List<Question>
    + addQuestion(q : Question) : boolean
    + removeQuestion(q : Question) : boolean
    + getSurveys() : List<Survey>
    + getSurvey(name : String) : Optional<Survey>
    + addSurvey(s : Survey) : boolean
    + toString() : String
    + equals(o : Object) : boolean
    + hashCode() : int
}

class Respondent{
    - id : Long
    - answerList : List<Answer>
    + Respondent(): Respondent
    + getId() : Long
    + setAnswers(answers: List<Answer>): void
    + addAnswer(answer: Answer): void
    + removeAnswer(answer: Answer): void
    + compareAnswer(answer: Answer): Boolean
    + toString() : String
    + equals(o : Object) : boolean
    + hashCode() : int
}

class Role {
    - id: Long
    - name: String
    + Role(name: String): Role
    + getId(): Long
    + getName(): String
    + setName(name: String): void
}

package question{
    abstract class Question{
        - id : Long
        - survey : Survey
        - question : String
        + Question(question : String) : Question
        + getId() : Long
        + getQuestion() : String
        + setQuestion(question : String) : void
        + getSurveyId() : Long
        + setSurvey(survey: Survey) : void
        + toString() : String
        + equals(o : Object) : boolean
        + hashCode() : int
    }
    class NumberQuestion extends Question{
        - max : int
        - min : int
        + NumberQuestion(question : String, max : int, min: int) : NumberQuestion
        + getMax() : int
        + setMax(max : int) : void
        + getMin() : int
        + setMin(min : int) : void
        + toString() : String
        + equals(o : Object) : boolean
        + hashCode() : int
    }
    enum MultipleChoiceType{
        SINGLE_SELECTION
        MULTI_SELECTION
    }
    class MultipleChoiceQuestion extends TextAnswerable{
        - options : Set<String>
        - type : MultipleChoiceType
        + MultipleChoiceQuestion(question : String, type : MultipleChoiceType) : MultipleChoiceQuestion
        + getOptions(): Set<String>
        + addOption(option : String) : boolean
        + removeOption(option : String) : boolean
        + getType() : MultipleChoiceType
        + setType(type : MultipleChoiceType) : void
        + toString() : String
        + equals(o : Object) : boolean
        + hashCode() : int
    }
    class TextAnswerable extends Question {
        + TextAnswerable(question: String): TextAnswerable
    }
}
package answer{
    abstract class Answer{
        - id : Long
        - survey : Survey
        + getId() : Long
        + getSurveyId() : Long
        + setSurvey(survey : Survey) : void
        + toString() : String
        + equals(o : Object) : boolean
        + hashCode() : int
    }
    class NumberAnswer extends Answer{
        - answer : int
        - question : NumberQuestion
        + getAnswer() : int
        + setAnswer(answer : int) : void
        + getQuestionId() : Long
        + setQuestion(question : Question) : void
        + toString() : String
        + equals(o : Object) : boolean
        + hashCode() : int
    }
    class TextAnswer extends Answer{
        - answer : String
        - question : TextAnswerable
        + TextAnswer(answer : String) : TextAnswer
        + getAnswer() : String
        + setAnswer(answer : String) : void
        + getQuestionId() : Long
        + setQuestion(question : Question) : void
        + toString() : String
        + equals(o : Object) : boolean
        + hashCode() : int
    }
}

Surveyor "1" o-- "0..*" Survey
Survey "1" *-- "1..*" Question
TextAnswer "0..*" *-- "1" TextAnswerable
NumberAnswer "0..*" *-- "1" NumberQuestion
MultipleChoiceQuestion "0..*" *-- "1" MultipleChoiceType
Respondent "1" *-- "1..*" Answer
Survey "1" o-- "0..*" Respondent
Surveyor "1" *-- "1..*" Role


@enduml